plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }
}

repositories {
    mavenCentral()
}

dependencies{
    implementation("org.postgresql:postgresql:42.7.8")
    implementation("com.h2database:h2:2.2.224")
    implementation("org.yaml:snakeyaml:2.5")
}

application {
    mainClass.set("by.gsu.olaksen.MainApp")
    applicationDefaultJvmArgs = ["--enable-native-access=javafx.graphics"]
}

javafx {
    version = "25.0.1"
    modules = ["javafx.controls","javafx.fxml"]
}